# blooms-ml

./: .buildinfo  README.md  ferrybox_data.html  genindex.html  index.html  intro.html  modeled_data.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  ferrybox_data.doctree  index.doctree  intro.doctree  modeled_data.doctree
.github/workflows/: documentation.yml
_sources/: ferrybox_data.md.txt  index.rst.txt  modeled_data.md.txt
app/: get_nve_data.py  prepare_data.py  prepare_model_data.py  prepare_surface.py  train.py
blooms_ml/: __init__.py  configs.py  learning.py  networks.py  utils.py  utils_ferrybox.py
blooms_ml/configs/: classification_binary.py  configs.py
doc/source/: conf.py  ferrybox_data.md  intro.md  modeled_data.md
notebooks/: check_classification.ipynb  check_classification_ferrybox.ipynb  check_classification_model.ipynb  check_data.ipynb  check_data_ferrybox.ipynb  check_regression.ipynb  check_regression_model.ipynb  check_train.ipynb  eda.ipynb  eda_ferrybox.ipynb  eda_model.ipynb  prepare_data.ipynb  stack_save.ipynb
