[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blooms-ml"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "xarray[complete]",
    "matplotlib",
    "ipykernel",
    "scikit-learn",
]

[project.optional-dependencies]
ml-cpu = [
  "jax[cpu]",
  "tensorflow",
  "optax",
  "flax",
  "clu",
  "ml-collections",
  "tensorflow-datasets",
]
ml-gpu = [
  "jax[gpu]",
  "tensorflow[and-cuda]",
  "optax",
  "flax",
  "clu",
  "ml-collections",
  "tensorflow-datasets",
]

[tool.setuptools.packages.find]
include = ["blooms_ml"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
]
